--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "1.0.0",
   "description": "LIS (Local Interface for Storage). A \"key-value\" frontend database build on indexedDB",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rykycastilla/lis"
+  },
+  "keywords": [
+    "database",
+    "indexedDB",
+    "key-value"
+  ],
   "author": "RykyCE",
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint": "^8.44.0",
-    "typescript": "^5.1.6"
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
+    "eslint": "8.44.0",
+    "typescript": "5.1.6"
   }
 }
