Fixing name for NPM

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lis",
+  "name": "lis-db",
   "version": "1.0.0",
   "description": "LIS (Local Interface for Storage). A \"key-value\" frontend database build on indexedDB",
   "main": "dist/index.js",
